--- a/SmartLearnChat/backend/package.json
+++ b/SmartLearnChat/backend/package.json
@@ -18,12 +18,14 @@
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
-        "express": "^4.18.2",
+        "epress": "^0.0.1-security",
+        "express": "^4.19.2",
         "express-validator": "^7.0.1",
+        "install": "^0.13.0",
         "jsonwebtoken": "^9.0.1",
         "mongoose": "^7.4.2",
         "morgan": "^1.10.0",
-        "openai": "^3.3.0"
+        "openai": "^4.41.0"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
@@ -31,7 +33,7 @@
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "@types/jsonwebtoken": "^9.0.1",
-        "@types/node": "^20.4.8",
+        "@types/node": "^20.12.8",
         "nodemon": "^3.0.1",
         "ts-node": "^10.9.1",
         "typescript": "^5.1.6"
